WebCore: https://bugs.webkit.org/show_bug.cgi?id=28073 Treat icons with no bit count and no color count as 256-color for purposes of quality ranking.  Also fix a couple cases of a style violation.

Reviewed by Eric Seidel.

Test: fast/images/icon-0colors.html

* platform/image-decoders/ico/ICOImageDecoder.cpp:
(WebCore::ICOImageDecoder::processDirectory):
(WebCore::ICOImageDecoder::readDirectoryEntry):

LayoutTests: https://bugs.webkit.org/show_bug.cgi?id=28073
Treat icons with no bit count and no color count as 256-color for
purposes of quality ranking.

Reviewed by Eric Seidel.

* fast/images/icon-0colors.html: Added.
* fast/images/resources/0colors.ico: Added.



Canonical link: https://commits.webkit.org/38645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47042 268f45cc-cd09-0410-ab3c-d52691b4dbfc